# mine-revegetation-rs

./: .gitignore  README.md  pyproject.toml
.github/workflows/: deploy.yml
configs/: aois.yaml  cities.yaml  data_sources.yaml  processing.yaml
data/: README.md
scripts/: export_beforeafter.py  export_training_tiles.py  export_web_3d.py  export_web_data.py  gpu_setup.sh  run_bridge_demo.py  run_bridge_mine.py  run_rehab_trajectory.py  run_satellite_demo.py  validate_worldcover.py
src/nz_canopy/: __init__.py  config.py
src/nz_canopy/data_sources/: __init__.py  boundaries.py  buildings.py  elevation.py  imagery.py
src/nz_canopy/labels/: __init__.py  audit.py  building_mask.py  chm.py  greenness.py  morphology.py  pseudo_label.py  slope.py  threshold.py
src/nz_canopy/processing/: __init__.py  preview.py  raster_align.py  tile_grid.py  vector_clip.py
src/nz_canopy/sampling/: __init__.py  stratified.py
src/nz_canopy/utils/: __init__.py  crs.py  logging.py  paths.py
src/reveg/: __init__.py  config.py
src/reveg/bridge/: __init__.py  pipeline.py  resample.py  validate.py
src/reveg/data/: __init__.py  chm_fetch.py  linz_fetch.py  s2_fetch.py
src/reveg/eval/: __init__.py
src/reveg/labels/: __init__.py  classes.py  indices.py  weak_labels.py
src/reveg/models/: __init__.py  dataset.py  (+2 more)
tests/: test_bridge.py  test_config.py  test_trajectory.py  test_weak_labels.py
web/: index.html  package-lock.json  package.json  vite.config.ts
web/src/: App.tsx  BeforeAfter.tsx  Canopy3D.tsx  Globe3D.tsx  SiteMap.tsx  UncertaintyGallery.tsx  data.ts  styles.css
(+14 files in other folders)
