[project]
name = "mine-revegetation-rs"
version = "0.1.0"
description = "Weak-supervised revegetation monitoring for mine rehabilitation"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }

dependencies = [
  # raster / vector core (shared with vendored canopy pipeline)
  "rasterio>=1.3",
  "rioxarray>=0.15",
  "xarray>=2024.1",
  "geopandas>=0.14",
  "shapely>=2.0",
  "pyproj>=3.6",
  "numpy>=1.24",
  "scipy>=1.10",
  "pandas>=2.0",
  "pyyaml>=6.0",
  "matplotlib>=3.7",
  "pillow>=10.0",
  "click>=8.1",
  "tqdm>=4.66",
  # satellite time series (Sentinel-2 via STAC)
  "odc-stac>=0.3",
  "pystac-client>=0.7",
  "planetary-computer>=1.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4",
  "pytest-cov>=4.1",
  "ruff>=0.4",
]
ml = [
  "torch>=2.1",
  "torchvision>=0.16",
  "segmentation-models-pytorch>=0.3.3",
  "transformers>=4.40",        # SegFormer backbone
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["reveg*", "nz_canopy*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"

[tool.ruff]
line-length = 100
target-version = "py310"
